<resources>
    <string name="app_name">Wanders</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="tvm">   MAMALAPURAM-Shore temple</string>
    <string name="mamallapuram">MAMALLAPURAM-SHORE TEMPLE</string>
    <string name="the_more_pictures">The more pictures</string>
    <string name="other_images">Other Images</string>
    <string name="the_meenakshi_temple_at_madurai">The Meenakshi Temple at Madurai</string>
    <string name="des_me">\n\nMeenakshi Temple (also referred to as Meenakshi Amman or Meenakshi-Sundareshwara Temple)[2], is a historic Hindu temple located on the southern bank of the Vaigai River[3] in the temple city[4] of Madurai, Tamil Nadu, India. It is dedicated to Meenakshi, a form of Parvati, and her consort, Sundareshwar, a form of Shiva.[5][6] The temple is at the center of the ancient temple city of Madurai mentioned in the Tamil Sangam literature, with the goddess temple mentioned in 6th century CE texts.\n\nHISTORY\n\nMadurai Meenakshi temple was built by King Kulasekara Pandya (1190-1216 CE). He built the main Portions of the three-storeyed gopura at the entrance of Sundareswarar Shrine and the central portion of the Goddess Meenakshi Shrine are some of the earliest surviving parts of the temple. The traditional texts call him a poet-saint king, additionally credit him with a poem called Ambikai Malai, as well as shrines (koil) each for Natarajar and Surya near the main temple, Ayyanar in the east, Vinayagar in the south, Kariamalperumal in the west and Kali in the north. He also built a Mahamandapam. Kulasekara Pandya was also a poet and he composed a poem on Meenakshi named Ambikai Malai.[8] Maravarman Sundara Pandyan I built a gopura in 1231, then called Avanivendaraman, later rebuilt, expanded and named as Sundara Pandya Thirukkopuram.[8]. Chitra gopuram (W), also known as Muttalakkum Vayil, was built by Maravarman Sundara Pandyan II (1238-1251). This gopuram is named after the frescoes and reliefs that depict secular and religious themes of Hindu culture. Maravarman Sundara Pandyan II also added a pillared corridor to the Sundareswara shrine and the Sundara Pandyan Mandapam.
    </string>
    <string name="des_meloc">\n\n
The temple and the city of Madurai (only major roads sketched).
The Meenakshi temple is located in the heart of historic Madurai city, about a kilometer south of the Vaigai River. It is about 460 kilometres (290 mi) southwest from Chennai, the state capital.[24] The temple complex is well connected with road network (four lane National Highway 38), near a major railway junction and an airport (IATA: IXM) with daily services. The city roads radiate from the temple complex and major ring roads form a concentric pattern for the city, a structure that follows the Silpa Sastra guidelines for a city design.[10][25] Madurai is one of the many temple towns in the state which is named after the groves, clusters or forests dominated by a particular variety of a tree or shrub and the same variety of tree or shrub sheltering the presiding deity. The region is believed to have been covered with Kadamba forest and hence called Kadambavanam</string>
    <string name="as">About Ajantha Caves:\n\tThe Ajanta Caves are 30 (approximately) rock-cut Buddhist cave monuments which date from the 2nd century BCE to about 480 CE in Aurangabad district of Maharashtra state of India.[1][note 1] The caves include paintings and rock-cut sculptures described as among the finest surviving examples of ancient Indian art, particularly expressive paintings that present emotions through gesture, pose and form.[3][4][5]
        According to UNESCO, these are masterpieces of Buddhist religious art that influenced the Indian art that followed.[6] The caves were built in two phases, the first phase starting around the 2nd century BCE, while the second phase was built around 400–650 CE, according to older accounts, or in a brief period of 460–480 CE according to later scholarship.[7] The site is a protected monument in the care of the Archaeological Survey of India,[8] and since 1983, the Ajanta Caves have been a UNESCO World Heritage Site.</string>
    <string name="ajantha_caves">Ajantha Caves
    </string>
    <string name="aa">\nLocation:\n Ajanta is one of the major tourist attractions of Maharashtra. It is about 6 kilometres (3.7 miles) from Fardapur, 59 kilometres (37 miles) from the city of Jalgaon, Maharashtra, India, 104 kilometres (65 miles) from the city of Aurangabad, and 350 kilometres (220 miles) east-northeast of Mumbai. Ajanta is 100 kilometres (62 miles) from the Ellora Caves, which contain Hindu, Jain and Buddhist caves, the last dating from a period similar to Ajanta. The Ajanta style is also found in the Ellora Caves and other sites such as the Elephanta Caves, Aurangabad Caves, Shivleni Caves and the cave temples of Karnataka
    </string>
    <string name="vv">\n\nVisitor Information:\n
* Famous for: Hill Station, Views, Nature, Temples.\n
* Major Attractions: Lingmala Waterfalls and Panchganga Temple.\n
* Nearby Places: Pune, Wai, Khandala.\n
* Ideal Visit Time: 2 days.\n
    \n\nAbout Mahabaleshwar:\n
        \tMahabaleshwar is a hill station in Maharashtra and is located at the Western Ghats. The average elevation of the place is approximately 1,353 meters above sea level and is the source of the Krishna River. The water originates from a spout which is shaped like the mouth of a cow and is situated at an ancient temple of Lord Shiva. The city is a famous summer retreat for the people in Mumbai and is famous for its lakes and trekking hotspots</string>
    <string name="mahabaleshwar">Mahabaleshwar</string>
    <string name="tt">\n\nHow to Reach:\n
* Air:\n
Pune International Airport is the nearest airport with the best connectivity about 3 hrs (121 km) away and is well connected both domestically and internationally. Take a cab from the airport to Mahabaleshwar.\n
* Rail:\n
Satara railway station (STR) about 1 hr 22 min (56.6 km) is the nearest railway station. It is well connected to all major cities of India and a cab can be taken from here to any part of the city.\n
* Road:\n
Maharashtra State Road Transport Corporation (MSRTC) runs interstate and intercity buses from Satara, the nearest town at good frequency. The road journey via a cab from Satara to Mahabaleshwar will take approximately 1 hour.\n
\nPlaces to Visit:\n
* Pratapgarh Fort\n
* Pratap Garden\n
* Afzal Khan Tomb\n
* Old Mahabaleshwar\n
* Bhawani Mandir\n
    </string>
    <string name="ao">\n\nKhajuraho:\n
* Madhya Pradesh  India\n
* 85 Hotels found\n
* Weather:  31° C\n
* Best Time: Jul-Mar Read More\n
* Ideal duration: 1-2 days\n
* Nearest Airport: Khajuraho Check Flights\n
    \nKhajuraho Tourism:\n
Khajuraho, a UNESCO World Heritage Site located in Madhya Pradesh, is known around the world for its stunning temples adorned by erotic and sensuous carvings.
    </string>
    <string name="gh">A small town located in the Bundelkhand region, Khajuraho is a brilliant example of Indian architecture and its culture back in the medieval period. The architecture of these Hindu and Jain temples depict the innocent form of love, the carvings on the walls display passion in the most erotic yet aesthetic ways. Built between 950 to 1050 AD the sheer confrontational nature of these carvings shows a stark paradox with the conventional Indian ideals about eroticism, leaving everybody spellbound. Art in this small town is engrained in all of its structures and are a classic example of the finesse of Indias cultural and artistic heritage. The best part about Khajuraho is that although scores of plunderers tried to destroy the whole complex, they could never succeed, even though they managed to reduce the number of temples and caves to 25 from a staggering 85 at the time it was created.
    </string>
    <string name="khajuraho">Khajuraho</string>
    <string name="states">States</string>
    <string name="rr">\nInformation:\n
* Chattisgarh  India\n
* Weather :   27° C\n
        \nTirathgarh Falls Overview:\n
Tirathgarh Falls is undoubtedly one of the most frequented tourist spots of Chhattisgarh. It is one spot that provides you with a culmination of entertainment, fun, picnic and adventure. The Tirathgarh Falls are also regarded as one of the best-known picnic spots in the whole of Jagdalpur. The unique feature of these falls is that it splits into multiple falls on its way down, offering a spectacular view to its visitors. This block type waterfall plunges 300 ft in one drop. Being located within the Kanger National Park makes Tirathgarh Falls a spot of ecotourism as well. This mesmerising waterfall is also named the milky fall as the water takes on a white colour while gushing downward. There is a small temple located beside the falls, and the lush, green forest surrounds the entire region. Tourists can also climb down to the base of the fall and indulge in a bath. Two hundred ten steps are leading the way to the bottom.\n
\n\nPlaces to Visit Nearby:\n
The Tirathgarh WaterFalls stands close to many other well-known tourist destinations. These include the famous Kutumsar Caves, Kailash Caves and The Kanger Dhara waterfalls. These places are located very close to Tirathgarh WaterFalls and lay at a walkable distance from each other. Also, these destinations are located in the Kanger National Park and hence tourists visit them while touring at the national park.
    </string>
    <string name="rd">\nBest Time to Visit Tirathgarh Falls:\n
    The Tirathgarh waterfalls are surrounded by a dense cover of trees and hence the temperature is not very high.  The best time to visit the Tirathgarh falls is during the early winter season. The temperature during this time is cool and pleasant. The temperature ranges from 18 to 28 degrees Celsius. During this period, the flow of water is strong and wide and hence many tourists visit the falls during this time. During the summers and late winters, the flow of water is weaker and narrower. During the monsoon season, the water levels rise drastically and heavy rainfall makes it difficult to visit the falls.\n
    \nTips for Travellers:\n
    There are no restaurants available near the waterfalls. The locals usually set up stalls in the surrounding regions, selling biscuits and oily food items. If you do choose to purchase a packet of biscuits, make sure you check its date of expiry. However, it is advisable that you carry food with you for the trip duration or return to Jagdalpur and eat over there.\n
    \nHow to Reach Tirathgarh Falls:\n
    The Tirathgarh Falls are located in the Kanger National Park. The falls are towards the south-west of Jagdalpur and at a distance of 35 km from the town. The Tirathgarh Falls can be approached from Darbha, i.e., from near the state highway connecting Jagdalpur and Sukma. Visitors can take a jeep from the Darbha junction towards Tirathgarh Falls and other nearby attractions (which include Kailash and Kotumsar Cave).
    The Tirathgarh falls is an excellent tourist destination due to its natural beauty. It accurately resembles the influence of nature on an area. Tourists enjoy their time in the activities that are made available to them. One can surely visit the falls with family and friends to enjoy the scenic and magnificent beauty of it.
    </string>
    <string name="tirathgarh_falls">Tirathgarh Falls</string>
    <string name="more"><![CDATA[More>>]]></string>
    <string name="union_teritories">Union Teritories</string>
</resources>