<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TNMEActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="474dp"
            android:layout_height="262dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/zxcv" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#2196F3"
            android:text="@string/the_meenakshi_temple_at_madurai"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="400dp"
            android:layout_height="589dp"
            android:adjustViewBounds="true"
            android:text="@string/des_me"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:adjustViewBounds="true"
            android:text="@string/des_meloc"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/other_images"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="472dp"
            android:layout_height="221dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/cv" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="543dp"
            android:layout_height="262dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/zx" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="504dp"
            android:layout_height="304dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/mnbv" />
    </LinearLayout>
</ScrollView>