<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MumbaiActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="484dp"
            android:layout_height="307dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/maha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#2196F3"
            android:text="@string/mahabaleshwar"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/vv"
            android:textSize="14sp"
            android:textStyle="bold">
        </TextView>

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/mah"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/tt"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/the_more_pictures"
            android:textSize="25sp"
            android:textStyle="bold|italic">

        </TextView>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/mjm" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/lop" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="444dp"
            android:layout_height="291dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/mmv" />


    </LinearLayout>

</ScrollView>